Fix button misalignment in API designer

--- a/composer/packages/theme/src/definitions/views/api-designer.less
+++ b/composer/packages/theme/src/definitions/views/api-designer.less
@@ -367,7 +367,12 @@
 
                 input {
                     background: ~"@{@{color}-api-designer-form-background-color}";
-                    font-size: 14px;
+                    font-size: 12px;
+                    font-weight: 100;
+                }
+                .button {
+                    padding: 10px 12px;
+                    margin: 0 !important;
                 }
             }
         }
@@ -380,7 +385,6 @@
         background: transparent;
         border: 1px solid~"@{@{color}-api-designer-action-icon-color}";
         padding: 4px 5px !important;
-        border: 1px solid #ccc;
         font-size: 10px !important;
 
         &:focus{
